--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,28 +1,17 @@
 <div class="page-header">
-  <h3>Board #<%= @board.id %></h3>
-</div>
+  <h3>
+    <%= @board.name %>
+  </h3>
 
-<div class="row">
-  <div class="col-md-12">
-    <dl class="dl-horizontal">
-      <dt>User</dt>
-      <dd><%= @board.user_id %></dd>
-
-      <dt>Name</dt>
-      <dd><%= @board.name %></dd>
-
-    </dl>
-
-    <div class="btn-group btn-group-justified">
-      <a href="/boards" class="btn btn-primary">
-        Back
-      </a>
-      <a href="/boards/<%= @board.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_board/<%= @board.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
-    </div>
+  <div class="btn-group">
+    <a href="/boards" class="btn btn-default btn-sm">
+      <i class="fa fa-chevron-left"></i>
+    </a>
+    <a href="/boards/<%= @board.id %>/edit" class="btn btn-default btn-sm">
+      <i class="fa fa-edit fa-fw"></i>
+    </a>
+    <a href="/delete_board/<%= @board.id %>" class="btn btn-default btn-sm" rel="nofollow">
+      <i class="fa fa-trash-o fa-fw"></i>
+    </a>
   </div>
 </div>
