--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -15,3 +15,23 @@
     </a>
   </div>
 </div>
+
+<div class="row">
+  <% @board.lists.each do |list| %>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <%= list.name %>
+          </h3>
+        </div>
+        <div class="panel-body">
+
+        </div>
+        <div class="panel-footer">
+
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
