--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row row-horizon">
   <% @board.lists.each do |list| %>
     <div class="col-md-3">
       <div class="panel panel-default">
