--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -26,7 +26,20 @@
           </h3>
         </div>
         <div class="panel-body">
-
+          <% list.cards.each do |card| %>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <%= card.name %>
+                </h4>
+              </div>
+              <div class="panel-body">
+                <p>
+                  <%= card.description %>
+                </p>
+              </div>
+            </div>
+          <% end %>
         </div>
         <div class="panel-footer">
 
