--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -42,7 +42,43 @@
           <% end %>
         </div>
         <div class="panel-footer">
+          <form action="/create_card" method="post">
+            <!-- Hidden input for authenticity token to protect from forgery -->
+            <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
+            <!-- Label and input for name -->
+            <div class="form-group">
+              <label for="name" class="control-label">
+                Name
+              </label>
+
+              <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @card.name %>">
+            </div>
+
+            <!-- Label and input for description -->
+            <div class="form-group">
+              <label for="description" class="control-label">
+                Description
+              </label>
+
+              <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"><%= @card.description %></textarea>
+            </div>
+
+            <!-- Label and input for list_id -->
+            <div class="form-group">
+              <label for="list_id" class="control-label">
+                List
+              </label>
+
+              <input type="text" id="list_id" name="list_id" placeholder="List" class="form-control" value="<%= @card.list_id %>">
+            </div>
+
+            <button class="btn btn-success">
+              Create Card
+            </button>
+            or
+            <a href="/cards">Cancel</a>
+          </form>
         </div>
       </div>
     </div>
