--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -41,6 +41,7 @@
             </div>
           <% end %>
         </div>
+        
         <div class="panel-footer">
           <form action="/create_card" method="post">
             <!-- Hidden input for authenticity token to protect from forgery -->
@@ -52,7 +53,7 @@
                 Name
               </label>
 
-              <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @card.name %>">
+              <input type="text" id="name" name="name" placeholder="Name" class="form-control">
             </div>
 
             <!-- Label and input for description -->
@@ -61,7 +62,7 @@
                 Description
               </label>
 
-              <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"><%= @card.description %></textarea>
+              <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"></textarea>
             </div>
 
             <!-- Label and input for list_id -->
@@ -70,14 +71,12 @@
                 List
               </label>
 
-              <input type="text" id="list_id" name="list_id" placeholder="List" class="form-control" value="<%= @card.list_id %>">
+              <input type="text" id="list_id" name="list_id" placeholder="List" class="form-control">
             </div>
 
-            <button class="btn btn-success">
+            <button class="btn btn-success btn-block">
               Create Card
             </button>
-            or
-            <a href="/cards">Cancel</a>
           </form>
         </div>
       </div>
