--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -41,7 +41,7 @@
             </div>
           <% end %>
         </div>
-        
+
         <div class="panel-footer">
           <form action="/create_card" method="post">
             <!-- Hidden input for authenticity token to protect from forgery -->
@@ -71,7 +71,7 @@
                 List
               </label>
 
-              <input type="text" id="list_id" name="list_id" placeholder="List" class="form-control">
+              <input type="text" id="list_id" name="list_id" placeholder="List" class="form-control" value="<%= list.id %>">
             </div>
 
             <button class="btn btn-success btn-block">
