--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -76,4 +76,44 @@
       </div>
     </div>
   <% end %>
+
+  <div class="col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          Add a new list
+        </h3>
+      </div>
+      <div class="panel-body">
+        <form action="/create_list" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+          <!-- Label and input for name -->
+          <div class="form-group">
+            <label for="name" class="control-label">
+              Name
+            </label>
+
+            <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @list.name %>">
+          </div>
+
+          <!-- Label and input for board_id -->
+          <div class="form-group">
+            <label for="board_id" class="control-label">
+              Board
+            </label>
+
+            <input type="text" id="board_id" name="board_id" placeholder="Board" class="form-control" value="<%= @list.board_id %>">
+          </div>
+
+          <button class="btn btn-success">
+            Create List
+          </button>
+          or
+          <a href="/lists">Cancel</a>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
