--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -95,7 +95,7 @@
               Name
             </label>
 
-            <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @list.name %>">
+            <input type="text" id="name" name="name" placeholder="Name" class="form-control">
           </div>
 
           <!-- Label and input for board_id -->
@@ -104,14 +104,12 @@
               Board
             </label>
 
-            <input type="text" id="board_id" name="board_id" placeholder="Board" class="form-control" value="<%= @list.board_id %>">
+            <input type="text" id="board_id" name="board_id" placeholder="Board" class="form-control">
           </div>
 
-          <button class="btn btn-success">
+          <button class="btn btn-success btn-block">
             Create List
           </button>
-          or
-          <a href="/lists">Cancel</a>
         </form>
       </div>
     </div>
