Pre-populate value for board_id

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -104,7 +104,7 @@
               Board
             </label>
 
-            <input type="text" id="board_id" name="board_id" placeholder="Board" class="form-control">
+            <input type="text" id="board_id" name="board_id" placeholder="Board" class="form-control" value="<%= @board.id %>">
           </div>
 
           <button class="btn btn-success btn-block">
