Add ability to edit list to boards#show

--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -40,7 +40,7 @@
         Update List
       </button>
       or
-      <a href="/lists/<%= @list.id %>">Cancel</a>
+      <a href="/boards/<%= @list.board_id %>">Cancel</a>
     </form>
   </div>
 </div>
