--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -22,7 +22,9 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">
-            <%= list.name %>
+            <a href="/lists/<%= list.id %>/edit">
+              <%= list.name %>
+            </a>
           </h3>
         </div>
         <div class="panel-body">
