Add ability to edit card to boards#show

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -32,7 +32,9 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <%= card.name %>
+                  <a href="/cards/<%= card.id %>/edit">
+                    <%= card.name %>
+                  </a>
                 </h4>
               </div>
               <div class="panel-body">
