--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -49,7 +49,7 @@
         Update Card
       </button>
       or
-      <a href="/cards/<%= @card.id %>">Cancel</a>
+      <a href="/boards/<%= @card.list.board_id %>">Cancel</a>
     </form>
   </div>
 </div>
