--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -27,14 +27,8 @@
         <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @list.name %>">
       </div>
 
-      <!-- Label and input for board_id -->
-      <div class="form-group">
-        <label for="board_id" class="control-label">
-          Board
-        </label>
-
-        <input type="text" id="board_id" name="board_id" placeholder="Board" class="form-control" value="<%= @list.board_id %>">
-      </div>
+      <!-- Hidden input for board_id -->
+      <input type="hidden"name="board_id" value="<%= @list.board_id %>">
 
       <button class="btn btn-warning">
         Update List
