--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -18,14 +18,8 @@
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-      <!-- Label and input for user_id -->
-      <div class="form-group">
-        <label for="user_id" class="control-label">
-          User
-        </label>
-
-        <input type="text" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @board.user_id %>">
-      </div>
+      <!-- Hidden input for user_id -->
+      <input type="hidden" name="user_id" value="<%= @board.user_id %>">
 
       <!-- Label and input for name -->
       <div class="form-group">
