--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -7,12 +7,14 @@
     <a href="/boards" class="btn btn-default btn-sm">
       <i class="fa fa-chevron-left"></i>
     </a>
-    <a href="/boards/<%= @board.id %>/edit" class="btn btn-default btn-sm">
-      <i class="fa fa-edit fa-fw"></i>
-    </a>
-    <a href="/delete_board/<%= @board.id %>" class="btn btn-default btn-sm" rel="nofollow">
-      <i class="fa fa-trash-o fa-fw"></i>
-    </a>
+    <% if current_user.id == @board.user_id %>
+      <a href="/boards/<%= @board.id %>/edit" class="btn btn-default btn-sm">
+        <i class="fa fa-edit fa-fw"></i>
+      </a>
+      <a href="/delete_board/<%= @board.id %>" class="btn btn-default btn-sm" rel="nofollow">
+        <i class="fa fa-trash-o fa-fw"></i>
+      </a>
+    <% end %>
   </div>
 </div>
 
