--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -56,6 +56,7 @@
           <% end %>
         </div>
 
+        <% if current_user.id == list.board.user_id %>
         <div class="panel-footer">
           <form action="/create_card" method="post">
             <!-- Hidden input for authenticity token to protect from forgery -->
@@ -87,6 +88,7 @@
             </button>
           </form>
         </div>
+        <% end %>
       </div>
     </div>
   <% end %>
