--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Listception</title>
+  <title>Fave</title>
 
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/cosmo/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="/bootstrap-horizon.css">
@@ -36,7 +36,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Listception</a>
+        <a href="/" class="navbar-brand">Fave</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,6 +48,11 @@
                 <%= current_user.email %>
               </a>
             </li>
+            <li><a href="/user_followings">Followers</a></li>
+            <li><a href="/board_followings">Board Followers</a></li>
+          <li><a href="/list_followings">List Followers</a></li>
+          
+
             <li>
               <a href="/users/sign_out" data-method="delete" rel="nofollow">
                 <i class="fa fa-sign-out"></i>
